k8s/notification/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: mini

spec:
  selector:
    app: notification-service

  ports:
    - port: 5006
      targetPort: 5006
      protocol: TCP

  type: ClusterIP
